--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "stringz": "^0.2.1",
     "twemoji": "^2.3.0",
     "vue": "^2.0.1",
-    "vue-save-state": "^1.1.0"
+    "vue-save-state": "^1.1.0",
+    "yarn": "^1.12.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
